fix: fix alignment of nav bar

--- a/assets/css/stories.css
+++ b/assets/css/stories.css
@@ -47,7 +47,7 @@
 
 .flip-card-back {
   background-color: transparent;
-  color: rgb(32, 136, 218);
+  color:rgb(0,137,222);
   padding: 5px;
   transform: rotateY(180deg);
 
